fix: probably way too much motion kek

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,7 +114,7 @@ input[type="color"]::-webkit-color-swatch {
 
 @keyframes load-in {
   0% {
-    transform: translateY(24px);
+    /* transform: translateY(24px); */
     opacity: 0;
     pointer-events: none;
   }
@@ -171,16 +171,17 @@ input[type="color"]::-webkit-color-swatch {
   }
 } */
 
-@keyframes store-transform-skeleton {
+/* @keyframes store-transform-skeleton {
   0% {
-    transform: translateY(100vh);
-    opacity: 1;
+    transform: translateY(24px);
+    opacity: 0;
   }
 
   100% {
     transform: none;
+    opacity: 1;
   }
-}
+} */
 
 /* .store-loading-animation {
   pointer-events: none;
@@ -192,7 +193,7 @@ input[type="color"]::-webkit-color-swatch {
   animation-delay: 0.25s;
 } */
 
-.store-loading-animation-skeleton {
+/* .store-loading-animation-skeleton {
   opacity: 1;
   pointer-events: none;
   transition: 250ms;
@@ -201,6 +202,16 @@ input[type="color"]::-webkit-color-swatch {
   animation: store-transform-skeleton 0.9s both;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   animation-delay: 0.2s;
+} */
+
+@keyframes pulse {
+  50% {
+      opacity: .5;
+      transform: scale(0.9)
+  }
+}
+.store-loading-img {
+  animation: pulse 1.2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .backend-loading-animation {
